--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
 
 </head>
 	<body class="container">
-		<img class="responsive-img" src="./images/nc-logo.jpg" />
-		<h4>Stay connected with your community and support your neighborhood through COVID-19.</h4>
+		<img id="logo" class="responsive-img" src="./images/nc-logo.jpg" />
+		<h5>Stay connected with your community and support your neighborhood through COVID-19.</h5>
 		<div id="content">
 
 		</div>
-
-
-		<br>
-		<br>
 
 		<script type="text/javascript" src="./css/materialize/js/materialize.min.js"></script>
 	</body>
